--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/vending.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/vending.yml
@@ -33,7 +33,11 @@
     - VendingMachineSpaceUp
     - VendingMachineStarkist
     chance: 1
-
+# SS220 BERPSI feature
+    rarePrototypes: 
+      - VendingMachineBrepsi
+    rareChance: 0.33
+# SS220 BERPSI feature end
 
 - type: entityTable
   id: ClothingVendorTable
