--- a/Resources/Prototypes/SS220/Flavors/flavors.yml
+++ b/Resources/Prototypes/SS220/Flavors/flavors.yml
@@ -57,3 +57,8 @@
   id: Xlebnuldiesel
   flavorType: Complex
   description: flavor-complex-xlebnuldiesel
+
+- type: flavor
+  id: brepsi
+  flavorType: Base
+  description: flavor-complex-brepsi
