--- a/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
@@ -15,6 +15,9 @@
     tags:
     - HamsterWearable
     - WhitelistChameleon
+# ss220 medkit fix begin
+    - MaskBreath
+# ss220 medkit fix end
   - type: HideLayerClothing
     layers:
       Snout: Mask
@@ -152,6 +155,9 @@
     tags:
     - PetWearable
     - WhitelistChameleon
+# ss220 medkit fix begin
+    - MaskBreath
+# ss220 medkit fix end
   - type: PhysicalComposition
     materialComposition:
       Steel: 50
@@ -195,6 +201,9 @@
     tags:
     - PetWearable
     - WhitelistChameleon
+# ss220 medkit fix begin
+    - MaskBreath
+# ss220 medkit fix end
   - type: PhysicalComposition
     materialComposition:
       Steel: 50
