--- a/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
@@ -439,6 +439,12 @@
     slots:
     - Hair
     - Snout
+  - type: UserInterface #SS220 - Smart gas mask - start
+    interfaces:
+      enum.SmartGasMaskUiKey.Key:
+        type: SmartGasMaskBoundUserInterface
+  - type: SmartGasMask
+    selectablePrototypes: ["AlertSmartGasMaskHalt", "AlertSmartGasMaskERTSupport"] #SS220 - Smart gas mask - end
     hideOnToggle: true
   - type: FlashImmunity
   - type: EyeProtection
