--- a/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
@@ -757,3 +757,24 @@
   - GlovesBlack
   - GlovesRed
   - GlovesBlue
+  
+  # Перчатки (Конец)
+
+#! Разное (Конец)
+
+#! Центком 
+- type: loadoutGroup
+  id: SurvivalCentcom
+  name: loadout-group-survival-centcom
+  minLimit: 2
+  hidden: true
+  loadouts:
+  - EmergencyNitrogenCentcom
+  - EmergencyOxygenCentcom
+  - LoadoutSpeciesVoxNitrogen
+  - EmergencyBeerCentcom
+#! Центком (Конец)
+
+
+
+
