--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Ammunition/powercells.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Ammunition/powercells.yml
@@ -105,3 +105,56 @@
   - type: ProjectileBatteryAmmoProvider
     proto: BulletBlasterPulse
     fireCost: 48
+
+- type: entity
+  parent: BaseItem
+  id: LaserCarabinePowerCell
+  name: Carabine power cell
+  description: It contains a lot more pain than you ever dreamed of.
+  suffix:  Laser
+  components:
+  - type: Item
+  - type: Battery
+    pricePerJoule: 0.15
+    maxCharge: 1200
+    startingCharge: 1200
+  - type: PowerCell
+  - type: Sprite
+    sprite: SS220/Objects/Weapons/Guns/Ammunition/Magazine/laser_carabine.rsi
+    layers:
+    - state: base
+    - map: [ "base" ]
+      state: o4
+      shader: unshaded
+  - type: GenericVisualizer
+    visuals:
+      enum.PowerCellFourVisual.State:
+        base:
+          Base: { state: base }
+          First: { state: o1 }
+          Second: { state: o2 }
+          Third: { state: o3 }
+          Fourth: { state: o4 }
+  - type: SolutionContainerManager
+    solutions:
+      battery:
+        maxVol: 5
+  - type: InjectableSolution
+    solution: battery
+  - type: DrawableSolution
+    solution: battery
+  - type: Extractable
+    juiceSolution:
+      reagents:
+        - ReagentId: Zinc
+          Quantity: 5
+  - type: Tag
+    tags:
+      - LaserCarabinePowerCell
+  - type: Appearance
+  - type: PowerCellFour
+  - type: Riggable
+  - type: AmmoCounter
+  - type: ProjectileBatteryAmmoProvider
+    proto: BulletLaserCarabine
+    fireCost: 48
