--- a/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
@@ -154,3 +154,12 @@
   - Trinkets
   - SponsorNeck #SS220-TwoOne-Floppa-Iteration
 #! Сервис (Конец)
+
+#! Центральное командование
+- type: roleLoadout
+  id: RoleSurvivalCentcom
+  groups:
+  - SurvivalCentcom
+  - GroupSpeciesBreathTool
+  - GroupTankHarness
+#! Центральное командование
