--- a/Resources/Prototypes/SS220/Entities/Effects/Hallucinations/revenant.yml
+++ b/Resources/Prototypes/SS220/Entities/Effects/Hallucinations/revenant.yml
@@ -8,7 +8,7 @@
     CrateStoneGrave: 6
     EffectEmpPulse: 6
     EffectSparks: 5
-    randomgibs: 5
+    SS220Gore: 5
     PortalRed: 2
     PortalBlue: 2
     CrystalGreen: 1
