--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -81,6 +81,7 @@
             - MagazinePistolSubMachineGunAcp
         whitelistFailPopup: gun-magazine-whitelist-fail
       gun_chamber:
+        startingItem: CartridgeAmmoAcp
         name: Chamber
         priority: 1
         whitelist:
