Revert "Remove deathrattle functionality from tracking implants (#35995)"
This reverts commit 140963852aca91da90fbde3f1472a268c60808b2.

--- a/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
@@ -142,7 +142,7 @@
   parent: BaseSubdermalImplant
   id: TrackingImplant
   name: tracking implant
-  description: This implant has a tracking device attached to the suit sensor network.
+  description: This implant has a tracking device attached to the suit sensor network, as well as a condition monitor for the Security radio channel.
   categories: [ HideSpawnMenu ]
   components:
     - type: SubdermalImplant
@@ -190,6 +190,14 @@
         - TraitorRole
         - NukeOperative
       # hidden-desc-end
+# SS220-Trackers DeathRattle-End
+    - type: TriggerOnMobstateChange
+      mobState:
+      - Critical
+    - type: Rattle
+      radioChannel: "Security"
+# SS220-Trackers DeathRattle-End
+
 #Traitor implants
 
 - type: entity
