--- a/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
@@ -190,7 +190,7 @@
         - TraitorRole
         - NukeOperative
       # hidden-desc-end
-# SS220-Trackers DeathRattle-End
+# SS220-Trackers DeathRattle-Start
     - type: TriggerOnMobstateChange
       mobState:
       - Critical
