--- a/Resources/Prototypes/Objectives/traitor.yml
+++ b/Resources/Prototypes/Objectives/traitor.yml
@@ -93,6 +93,8 @@
   - type: TargetObjective
     title: objective-condition-maroon-person-title
   - type: PickRandomPerson
+  - type: KillPersonCondition
+    requireMaroon: true
 
 - type: entity
   parent: [BaseTraitorObjective, BaseKillObjective]
