--- a/Resources/Audio/SS220/Announcements/attributions.yml
+++ b/Resources/Audio/SS220/Announcements/attributions.yml
@@ -13,3 +13,8 @@
   license: "Custom"
   copyright: "Remix created by SkaldetSkaeg for SS220"
   source: "https://www.myinstants.com/en/instant/idris-elba-cough-95302/"
+
+- files: ["hehelta.ogg"]
+  license: "Custom"
+  copyright: "Warner Music UK, Remix created by Mixnikita for SS220"
+  source: "https://www.youtube.com/watch?v=RdIk3W3Ob_0&ab_channel=GerryRafferty-Topic"
