--- a/Resources/Prototypes/Recipes/Lathes/medical.yml
+++ b/Resources/Prototypes/Recipes/Lathes/medical.yml
@@ -172,7 +172,7 @@
   name: lathe-recipe-MedkitRadiation-name
 
 - type: latheRecipe
-##  parent: Medkit #ss220 medkit fix
+#  parent: Medkit ss220 medkit fix
   id: MedkitCombat
   result: MedkitCombat
   name: lathe-recipe-MedkitCombat-name
