--- a/Resources/Prototypes/SS220/tags.yml
+++ b/Resources/Prototypes/SS220/tags.yml
@@ -222,3 +222,8 @@
 
 - type: Tag
   id: WhitelistPdaIdPainter
+
+# ss220 medkit fix #2834 begin
+- type: Tag
+  id: MaskBreath
+# ss220 medkit fix #2834  end
