--- a/Resources/Prototypes/SS220/Traits/disabilities.yml
+++ b/Resources/Prototypes/SS220/Traits/disabilities.yml
@@ -3,6 +3,8 @@
   name: trait-slowness-name
   description: trait-slowness-desc
   category: Disabilities
+  mutuallyExclusiveWith:
+    - Nervousness
   components:
   - type: ChangeSpeedDoAfters
     coefficient: 1.3
@@ -11,6 +13,8 @@
   id: Nervousness
   name: trait-nervousness-name
   description: trait-nervousness-desc
+  mutuallyExclusiveWith:
+    - Slowness
   category: Disabilities
   components:
   - type: ChangeSpeedDoAfters
