--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
@@ -31,6 +31,7 @@
     - suitStorage
     - Belt
   - type: Gun
+    canSuicide: true
     fireRate: 6
     selectedMode: SemiAuto
     availableModes:
