--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -83,7 +83,7 @@
     - 0,0,1,0
     - 0,1,0,1
   - type: Gun
-    canSuicide: true
+    canSuicide: true ##SS220-new-feature kus
   - type: Tag
     tags:
     - Sidearm
@@ -102,7 +102,7 @@
   - type: Item
     size: Small
   - type: Gun
-    canSuicide: true
+    canSuicide: true ##SS220-new-feature kus
   - type: Tag
     tags:
     - Sidearm
