--- a/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/jumpsuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/jumpsuits.yml
@@ -758,3 +758,17 @@
     sprite: SS220/Clothing/Uniforms/Jumpsuit/ussp_uniform.rsi
   - type: Clothing
     sprite: SS220/Clothing/Uniforms/Jumpsuit/ussp_uniform.rsi
+
+# Пассажирский жёлтый комбез
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformYellow220
+  name: yellow jumpsuit
+  description: A yellow jumpsuit!
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/nanotrasen_officer.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/nanotrasen_officer.rsi
