--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -82,8 +82,10 @@
     shape:
     - 0,0,1,0
     - 0,1,0,1
+  #SS220-new-feature kus begin
   - type: Gun
-    canSuicide: true ##SS220-new-feature kus
+    canSuicide: true
+  #SS220-new-feature kus end
   - type: Tag
     tags:
     - Sidearm
@@ -101,8 +103,10 @@
   components:
   - type: Item
     size: Small
+  #SS220-new-feature kus begin
   - type: Gun
-    canSuicide: true ##SS220-new-feature kus
+    canSuicide: true
+  #SS220-new-feature kus end
   - type: Tag
     tags:
     - Sidearm
