ADD: Shoes for med

--- a/Resources/Prototypes/SS220/Loadouts/Jobs/Medical/medical_doctor.yml
+++ b/Resources/Prototypes/SS220/Loadouts/Jobs/Medical/medical_doctor.yml
@@ -86,6 +86,11 @@
   equipment:
     shoes: ClothingShoesResponsibility
 
+- type: loadout
+  id: MedicalBlackShoes
+  equipment:
+    shoes: ClothingShoesColorBlack
+
 # Neck
 - type: loadout
   id: WhiteScarf
