Переделка Брепси на Ррр-анту и добавление спрайтов

--- a/Resources/Prototypes/SS220/Catalog/VendingMachines/Inventories/rrranta.yml
+++ b/Resources/Prototypes/SS220/Catalog/VendingMachines/Inventories/rrranta.yml
@@ -1,5 +1,5 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 - type: vendingMachineInventory
-  id: BrepsiInventory
+  id: RrrantaInventory
   startingInventory:
-    DrinkBrepsiCan: 5
+    DrinkRrrantaCan: 5
