--- a/Resources/Prototypes/SS220/Flavors/flavors.yml
+++ b/Resources/Prototypes/SS220/Flavors/flavors.yml
@@ -59,6 +59,6 @@
   description: flavor-complex-xlebnuldiesel
 
 - type: flavor
-  id: brepsi
-  flavorType: Base
-  description: flavor-complex-brepsi
+  id: rrranta
+  flavorType: Complex
+  description: flavor-complex-rrranta
