--- a/Resources/Prototypes/SS220/Catalog/VendingMachines/goodbyes.yml
+++ b/Resources/Prototypes/SS220/Catalog/VendingMachines/goodbyes.yml
@@ -1,6 +1,6 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 - type: localizedDataset
-  id: BrepsiGoodbyes
+  id: RrrantaGoodbyes
   values:
-    prefix: thankyou-brepsi-
+    prefix: thankyou-rrranta-
     count: 4
