--- a/Resources/Prototypes/SS220/Reagents/Consumable/Drink/drinks.yml
+++ b/Resources/Prototypes/SS220/Reagents/Consumable/Drink/drinks.yml
@@ -145,7 +145,7 @@
         messages: [ "capsaicin-effect-heavy-burn" ]
         probability: 0.4
 
-#BrepsiFeature
+#RrrantaFeature
 - type: reagent
   id: Rrranta
   name: reagent-name-rrranta
