--- a/Resources/Maps/SS220/Shuttles/escape_pod_small.yml
+++ b/Resources/Maps/SS220/Shuttles/escape_pod_small.yml
@@ -2,8 +2,8 @@ meta:
   format: 7
   category: Grid
   engineVersion: 254.1.0
-  forkId: ""
-  forkVersion: ""
+  forkId: "SS220 station 14"
+  forkVersion: "1"
   time: 05/10/2025 07:43:49
   entityCount: 32
 maps: []
