ADD: Origami Arts for Uplink

--- a/Resources/Prototypes/SS220/Catalog/Fills/Boxes/general.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Boxes/general.yml
@@ -17,3 +17,13 @@
     - id: PenDnaScrambler
     - id: DnaCopyImplanter
     - id: PaperDnaCopyImplanter
+
+- type: entity
+  id: BoxOrigamiKit
+  parent: BoxCardboard
+  components:
+  - type: StorageFill
+    contents:
+    - id: OrigamiBook
+    - id: Paper
+      amount: 3
