--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/paper.yml
@@ -401,6 +401,15 @@
   name: paper airplane
   description: A toy airplane made of paper.
   components:
+  - type: OrigamiWeapon
+    damage:
+      types:
+        Blunt: 20
+    damageWithoutGlasses:
+      types:
+        Blunt: 25
+        Stamina: 25
+    throwSpeedIncrease: 1.3
   - type: Paper
   - type: PaperLabelType
   - type: Item
