--- a/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
@@ -113,7 +113,7 @@
     - id: Siiktajr
   - type: LimitationRevive
     maxRevive: 3
-    typeDamageOnDead:
+    damage:
       types:
         Сerebral: 400
 
