--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ert/jobs_ERT.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ert/jobs_ERT.yml
@@ -175,7 +175,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
     - type: RandomHumanoidAppearance
@@ -241,7 +241,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
     - type: RandomHumanoidAppearance
@@ -312,7 +312,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
     - type: RandomHumanoidAppearance
@@ -380,7 +380,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
@@ -450,7 +450,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
