--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/iron/jobs_IronSquad.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/iron/jobs_IronSquad.yml
@@ -96,7 +96,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
@@ -207,7 +207,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
@@ -322,7 +322,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
@@ -441,7 +441,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
@@ -550,7 +550,7 @@
     - type: LimitationRevive
       maxRevive: 3
       delayBeforeDamage: 180
-      typeDamageOnDead:
+      damage:
         types:
           Сerebral: 400
 
