--- a/Resources/Prototypes/Entities/Mobs/Species/dwarf.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/dwarf.yml
@@ -85,7 +85,7 @@
   #ss220 emote 5 sec end
   #SS220 LimitationRevive - start
   - type: LimitationRevive
-    typeDamageOnDead:
+    damage:
       types:
         Сerebral: 400
   #SS220 LimitationRevive - end
