--- a/Resources/Prototypes/Entities/Mobs/Species/slime.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/slime.yml
@@ -161,7 +161,7 @@
   #SS220 LimitationRevive - start
   - type: LimitationRevive
     maxRevive: 100 #has no death limit
-    typeDamageOnDead:
+    damage:
       types:
         Сerebral: 400
   #SS220 LimitationRevive - end
